--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -12,8 +12,8 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:fontFamily="@font/roboto"
-        android:text="Добро пожаловать!"
+        android:fontFamily="@font/roboto_bold"
+        android:text="@string/welcome"
         android:textColor="@color/white"
         android:textSize="18sp" />
 
@@ -27,8 +27,8 @@
             android:id="@+id/et_login"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@drawable/background_edit_text"
-            android:hint="Логин"
+            android:background="@drawable/background_edit_text_login"
+            android:hint="@string/login"
             android:maxLength="12"
             android:maxLines="1"
             android:textSize="14sp" />
@@ -47,8 +47,8 @@
             android:id="@+id/et_password"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@drawable/background_edit_text"
-            android:hint="Пароль"
+            android:background="@drawable/background_edit_text_login"
+            android:hint="@string/password"
             android:textSize="14sp" />
 
     </com.google.android.material.textfield.TextInputLayout>
@@ -60,64 +60,69 @@
         android:layout_marginVertical="26dp">
 
         <CheckBox
+            android:id="@+id/cb_saved"
+            style="@style/CustomCheckBox"
             android:layout_width="30dp"
             android:layout_height="30dp"
-            style="@style/CustomCheckBox"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            android:id="@+id/cb_saved"/>
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:fontFamily="@font/roboto"
+            android:text="@string/saved"
             android:textColor="@color/white"
             android:textSize="16sp"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toEndOf="@id/cb_saved"
-            android:text="Сохранить"
-            android:layout_marginStart="8dp"/>
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
+            android:id="@+id/tv_forgot_password"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Забыли пароль?"
-            android:id="@+id/tv_forgot_password"
+            android:fontFamily="@font/roboto"
+            android:text="@string/forgot_password"
             android:textColor="@color/white"
-            app:layout_constraintEnd_toEndOf="parent"
             android:textSize="16sp"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"/>
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <com.google.android.material.button.MaterialButton
+        android:id="@+id/btn_sign_in"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="10dp"
-        app:cornerRadius="10dp"
         android:backgroundTint="#55B935"
-        android:text="Войти"
+        android:fontFamily="@font/roboto"
+        android:paddingVertical="14dp"
+        android:text="@string/sign_in"
         android:textSize="16sp"
-        android:id="@+id/btn_sign_in"
-        android:paddingVertical="10dp"/>
+        app:cornerRadius="10dp" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="16sp"
-        android:text="У вас нет аккаунта?"
+        android:layout_marginTop="20dp"
+        android:fontFamily="@font/roboto"
+        android:text="@string/no_account"
         android:textColor="@color/white"
-        android:layout_marginTop="20dp"/>
+        android:textSize="16sp" />
 
     <TextView
+        android:id="@+id/tv_registration"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Зарегистрироваться"
         android:layout_marginTop="16dp"
+        android:fontFamily="@font/roboto"
+        android:text="@string/register"
         android:textColor="@color/white"
-        android:textSize="16sp"
-        android:id="@+id/tv_registration"/>
+        android:textSize="16sp" />
 
 </LinearLayout>
