--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -27,12 +27,6 @@
         android:name="com.green.kamchatka.ui.fragments.main.MainFragment"
         android:label="fragment_main"
         tools:layout="@layout/fragment_main" >
-        <action
-            android:id="@+id/action_mainFragment_to_profileFragment"
-            app:destination="@id/profileFragment" />
-        <action
-            android:id="@+id/action_mainFragment_to_routeFragment"
-            app:destination="@id/routeFragment" />
     </fragment>
     <fragment
         android:id="@+id/profileFragment"
@@ -44,4 +38,18 @@
         android:name="com.green.kamchatka.ui.fragments.route.RouteFragment"
         android:label="fragment_route"
         tools:layout="@layout/fragment_route" />
+    <fragment
+        android:id="@+id/trailsFragment"
+        android:name="com.green.kamchatka.ui.fragments.trails.TrailsFragment"
+        android:label="fragment_trails"
+        tools:layout="@layout/fragment_trails" >
+        <action
+            android:id="@+id/action_trailsFragment_to_routeFragment"
+            app:destination="@id/routeFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/chatFragment"
+        android:name="com.green.kamchatka.ui.fragments.chat.ChatFragment"
+        android:label="fragment_chat"
+        tools:layout="@layout/fragment_chat" />
 </navigation>
