--- a/app/src/main/res/layout/fragment_registration.xml
+++ b/app/src/main/res/layout/fragment_registration.xml
@@ -123,7 +123,7 @@
         android:backgroundTint="#55B935"
         android:fontFamily="@font/roboto"
         android:paddingVertical="14dp"
-        android:text="@string/sign_in"
+        android:text="@string/register"
         android:textSize="16sp"
         app:cornerRadius="10dp" />
 
