--- a/app/src/main/res/layout/fragment_result.xml
+++ b/app/src/main/res/layout/fragment_result.xml
@@ -11,7 +11,7 @@
     <ImageView
         android:layout_width="164dp"
         android:layout_height="100dp"
-        tools:src="@color/black"
+        android:src="@drawable/eco"
         android:id="@+id/iv_status"/>
 
     <TextView
