--- a/app/src/main/res/layout/fragment_trails.xml
+++ b/app/src/main/res/layout/fragment_trails.xml
@@ -13,8 +13,8 @@
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:paddingBottom="10dp"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:paddingBottom="10dp">
 
             <TextView
                 android:id="@+id/natural_park_tv"
@@ -108,11 +108,11 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="20dp"
                 android:fontFamily="@font/roboto_bold"
+                android:text="О тропе"
                 android:textColor="@color/black"
                 android:textSize="18sp"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/mapView_yandex"
-                android:text="О тропе" />
+                app:layout_constraintTop_toBottomOf="@id/mapView_yandex" />
 
             <TextView
                 android:id="@+id/text_about_trail"
@@ -125,21 +125,21 @@
                 android:textSize="16sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/about_trail_tv"/>
+                app:layout_constraintTop_toBottomOf="@id/about_trail_tv" />
 
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/btn_order"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginHorizontal="20dp"
                 android:layout_marginTop="15dp"
                 android:backgroundTint="#55B935"
                 android:fontFamily="@font/roboto"
-                app:layout_constraintTop_toBottomOf="@id/text_about_trail"
                 android:paddingVertical="14dp"
                 android:text="Забронировать"
-                android:layout_marginHorizontal="20dp"
                 android:textSize="16sp"
-                app:cornerRadius="10dp" />
+                app:cornerRadius="10dp"
+                app:layout_constraintTop_toBottomOf="@id/text_about_trail" />
 
             <TextView
                 android:id="@+id/reviews"
@@ -147,11 +147,11 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="20dp"
                 android:fontFamily="@font/roboto_bold"
+                android:text="Отзывы"
                 android:textColor="@color/black"
                 android:textSize="18sp"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/btn_order"
-                android:text="Отзывы" />
+                app:layout_constraintTop_toBottomOf="@id/btn_order" />
 
             <com.google.android.material.card.MaterialCardView
                 android:id="@+id/card_reviews"
@@ -159,27 +159,27 @@
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="20dp"
                 android:layout_marginTop="10dp"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/reviews"
                 android:backgroundTint="@color/white"
                 app:cardCornerRadius="10dp"
                 app:cardElevation="3dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/reviews"
                 app:strokeColor="@color/white"
                 tools:ignore="MissingConstraints">
 
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:layout_width="match_parent"
-                    android:paddingBottom="15dp"
-                    android:layout_height="match_parent">
+                    android:layout_height="match_parent"
+                    android:paddingBottom="15dp">
 
                     <com.google.android.material.card.MaterialCardView
                         android:id="@+id/cv_avatar"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_margin="10dp"
                         android:backgroundTint="@color/white"
                         app:cardCornerRadius="300dp"
-                        android:layout_margin="10dp"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent"
                         app:strokeColor="@color/white"
@@ -189,7 +189,7 @@
                             android:id="@+id/iv_user_photo"
                             android:layout_width="80dp"
                             android:layout_height="80dp"
-                            android:src="@drawable/baseline_account_circle_24" />
+                            android:src="@drawable/ic_account" />
                     </com.google.android.material.card.MaterialCardView>
 
                     <TextView
@@ -209,9 +209,9 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="10dp"
+                        android:layout_marginTop="2dp"
                         android:text="15 декабря 2023"
                         android:textSize="12sp"
-                        android:layout_marginTop="2dp"
                         app:layout_constraintStart_toEndOf="@id/cv_avatar"
                         app:layout_constraintTop_toBottomOf="@id/name" />
 
@@ -219,52 +219,28 @@
                         android:id="@+id/reviews_txt"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:paddingHorizontal="20dp"
                         android:layout_marginTop="5dp"
+                        android:paddingHorizontal="20dp"
                         android:text="@string/reviewrs"
                         android:textColor="@color/black"
                         android:textSize="16sp"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toBottomOf="@id/cv_avatar"/>
+                        app:layout_constraintTop_toBottomOf="@id/cv_avatar" />
 
                     <LinearLayout
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:orientation="horizontal"
                         android:layout_marginEnd="20dp"
+                        android:orientation="horizontal"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintTop_toBottomOf="@id/reviews_txt">
 
-                        <ImageView
+                        <RatingBar
+                            android:id="@+id/et_rating_comment"
+                            style="@style/Widget.AppCompat.RatingBar.Small"
                             android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:padding="2dp"
-                            android:src="@drawable/rating" />
-
-                        <ImageView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:padding="2dp"
-                            android:src="@drawable/rating" />
-
-                        <ImageView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:padding="2dp"
-                            android:src="@drawable/rating" />
-
-                        <ImageView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:padding="2dp"
-                            android:src="@drawable/rating" />
-
-                        <ImageView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:padding="2dp"
-                            android:src="@drawable/rating" />
+                            android:layout_height="wrap_content" />
                     </LinearLayout>
                 </androidx.constraintlayout.widget.ConstraintLayout>
             </com.google.android.material.card.MaterialCardView>
@@ -275,27 +251,27 @@
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="20dp"
                 android:layout_marginTop="10dp"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/card_reviews"
                 android:backgroundTint="@color/white"
                 app:cardCornerRadius="10dp"
                 app:cardElevation="3dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/card_reviews"
                 app:strokeColor="@color/white"
                 tools:ignore="MissingConstraints">
 
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:layout_width="match_parent"
-                    android:paddingBottom="15dp"
-                    android:layout_height="match_parent">
+                    android:layout_height="match_parent"
+                    android:paddingBottom="15dp">
 
                     <com.google.android.material.card.MaterialCardView
                         android:id="@+id/cv_avatar2"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_margin="10dp"
                         android:backgroundTint="@color/white"
                         app:cardCornerRadius="300dp"
-                        android:layout_margin="10dp"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent"
                         app:strokeColor="@color/white"
@@ -305,7 +281,7 @@
                             android:id="@+id/iv_user_photo2"
                             android:layout_width="80dp"
                             android:layout_height="80dp"
-                            android:src="@drawable/baseline_account_circle_24" />
+                            android:src="@drawable/ic_account" />
                     </com.google.android.material.card.MaterialCardView>
 
                     <TextView
@@ -325,9 +301,9 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="10dp"
+                        android:layout_marginTop="2dp"
                         android:text="31 декабря 2023"
                         android:textSize="12sp"
-                        android:layout_marginTop="2dp"
                         app:layout_constraintStart_toEndOf="@id/cv_avatar2"
                         app:layout_constraintTop_toBottomOf="@id/name2" />
 
@@ -335,52 +311,30 @@
                         android:id="@+id/reviews_txt2"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:paddingHorizontal="20dp"
                         android:layout_marginTop="5dp"
+                        android:paddingHorizontal="20dp"
                         android:text="Видела в парке ёжика. Он был просто огромен."
                         android:textColor="@color/black"
                         android:textSize="16sp"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toBottomOf="@id/cv_avatar2"/>
+                        app:layout_constraintTop_toBottomOf="@id/cv_avatar2" />
 
                     <LinearLayout
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:orientation="horizontal"
                         android:layout_marginEnd="20dp"
+                        android:orientation="horizontal"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintTop_toBottomOf="@id/reviews_txt2">
 
-                        <ImageView
+                        <RatingBar
+                            android:id="@+id/et_rating_comment_second"
+                            style="@style/Widget.AppCompat.RatingBar.Small"
                             android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:padding="2dp"
-                            android:src="@drawable/rating" />
+                            android:layout_height="wrap_content" />
 
-                        <ImageView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:padding="2dp"
-                            android:src="@drawable/rating" />
 
-                        <ImageView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:padding="2dp"
-                            android:src="@drawable/rating_null" />
-
-                        <ImageView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:padding="2dp"
-                            android:src="@drawable/rating_null" />
-
-                        <ImageView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:padding="2dp"
-                            android:src="@drawable/rating_null" />
                     </LinearLayout>
                 </androidx.constraintlayout.widget.ConstraintLayout>
             </com.google.android.material.card.MaterialCardView>
@@ -391,11 +345,11 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="25dp"
                 android:layout_marginTop="20dp"
-                android:textColor="#494848"
                 android:text="Все отзывы"
+                android:textColor="#494848"
                 android:textSize="16sp"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/card_reviews2"/>
+                app:layout_constraintTop_toBottomOf="@id/card_reviews2" />
 
             <TextView
                 android:id="@+id/leave_feedback"
@@ -407,46 +361,23 @@
                 android:text="Оставить отзыв"
                 android:textSize="18sp"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/full_reviews"/>
+                app:layout_constraintTop_toBottomOf="@id/full_reviews" />
 
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
                 android:layout_marginStart="20dp"
                 android:layout_marginTop="10dp"
+                android:orientation="horizontal"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/leave_feedback">
 
-                <ImageView
+                <RatingBar
+                    android:id="@+id/et_rating_my_comment"
+                    style="@style/Widget.AppCompat.RatingBar.Indicator"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:padding="7dp"
-                    android:src="@drawable/rating_null" />
+                    android:layout_height="wrap_content" />
 
-                <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:padding="7dp"
-                    android:src="@drawable/rating_null" />
-
-                <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:padding="7dp"
-                    android:src="@drawable/rating_null" />
-
-                <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:padding="7dp"
-                    android:src="@drawable/rating_null" />
-
-                <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:padding="7dp"
-                    android:src="@drawable/rating_null" />
             </LinearLayout>
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.core.widget.NestedScrollView>
