--- a/app/src/main/res/layout/item_park.xml
+++ b/app/src/main/res/layout/item_park.xml
@@ -13,6 +13,8 @@
         app:cardCornerRadius="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:strokeColor="@color/white"
+        app:strokeWidth="0dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
@@ -28,7 +30,8 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                tools:src="@color/black" />
+                android:scaleType="fitXY"
+                tools:src="@drawable/first_park" />
 
             <TextView
                 android:id="@+id/tv_title"
@@ -43,16 +46,21 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent" />
 
-            <ImageView
-                android:id="@+id/iv_occupancy_level"
+            <RatingBar
                 android:layout_width="wrap_content"
+                style="@style/ParksRatingBar"
+                android:numStars="8"
+                android:transformPivotX="0dp"
+                android:id="@+id/rt_fullness"
+                android:transformPivotY="0dp"
+                android:orientation="horizontal"
+                android:rating="5.0"
+                android:isIndicator="false"
+                android:stepSize="0.5"
                 android:layout_height="wrap_content"
-                android:src="@drawable/ic_lvl_four"
-                app:layout_constraintBottom_toTopOf="@id/tv_title"
-                app:layout_constraintStart_toStartOf="@id/tv_title" />
+                app:layout_constraintBottom_toTopOf="@+id/tv_title"
+                app:layout_constraintStart_toStartOf="@id/tv_title"/>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
-
     </com.google.android.material.card.MaterialCardView>
-
 </androidx.constraintlayout.widget.ConstraintLayout>
