--- a/app/src/main/res/layout/item_reviews.xml
+++ b/app/src/main/res/layout/item_reviews.xml
@@ -31,7 +31,7 @@
                 android:id="@+id/iv_user_photo"
                 android:layout_width="80dp"
                 android:layout_height="80dp"
-                android:src="@drawable/baseline_account_circle_24" />
+                android:src="@drawable/ic_account" />
         </com.google.android.material.card.MaterialCardView>
 
         <TextView
