--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="gray">#B0B0B0</color>
     <color name="dark_green">#397245</color>
     <color name="light_green">#55B935</color>
+    <color name="dark_gray">#646464</color>
 </resources>
